--- a/self_introduce.html
+++ b/self_introduce.html
@@ -144,6 +144,9 @@
                         <h1>☆ 시작은 미약하지만 ☆</h1>
                         <h1>창대한 끝을 맞이할 때까지</h1>
                         <h1>끝없이 소통하고 노력하기</h1>
+                        <br><br><br>
+                        <h1 id="front_end">결론 : 프론트엔드 트랙에서 1년 열심히 구르겠습니다 .</h1>
+                        <h1> ( _ _ ) </h1>
                     </div>
                 </div>
                 
